--- a/src/main/webapp/WEB-INF/views/thymeleaf/InicioDeSesion.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/InicioDeSesion.html
@@ -22,6 +22,20 @@
 
     <p >¿No tenés cuenta aún? <a href="registro.html" class="link">Registrate</a></p>
 </form>
+
+<!-- Footer -->
+<footer>
+    <div class="footer-container">
+        <p>&copy; 2024 UNLAM. Todos los derechos reservados.</p>
+        <div class="footer-alumnos">
+            <p>Lucas Gavagnin | </p>
+            <p>Gonzalo Ramos | </p>
+            <p>Martin Zaccardo | </p>
+            <p>Franco Vargas | </p>
+            <p>Victoria Croce </p>
+        </div>
+    </div>
+</footer>
 </body>
 
 </html>
