Vista y controlador basico menuJuego, iniciar Sesion y amigos

--- a/src/main/webapp/WEB-INF/views/thymeleaf/Amigos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/Amigos.html
@@ -14,13 +14,13 @@
     </div>
     <div class="header-usuario">
         <a href="">
-            <img th:src="@{.../img/usuario.jpg}" alt="Usuario">
+            <img id="usuario" th:src="@{/img/usuario.png}" alt="Usuario">
         </a>
 
     </div>
     <div class="header-confi">
         <a href="">
-            <img th:src="@{/resources/core/img/settings.jpg}" alt="Configuracion">
+            <img id="configuracion" th:src="@{/img/configuracion.png}"alt="Configuracion">
         </a>
     </div>
 </header>
