--- a/src/main/webapp/WEB-INF/views/thymeleaf/MenuJuego.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/MenuJuego.html
@@ -15,13 +15,13 @@
     </div>
     <div class="header-usuario">
         <a href="">
-            <img th:src="@{/resources/core/img/usuario.jpg}" alt="Usuario">
+            <img id="usuario" th:src="@{/img/usuario.png}" alt="Usuario">
         </a>
 
     </div>
     <div class="header-confi">
         <a href="">
-            <img th:src="@{/resources/core/img/settings.jpg}" alt="Configuracion">
+            <img id="configuracion" th:src="@{/img/configuracion.png}" alt="Configuracion">
         </a>
     </div>
 </header>
@@ -29,8 +29,7 @@
     <div class="info-container">
         <h1>TRUCO</h1>
         <!-- Imagen de portada del juego -->
-
-        <img th:src="@{/resources/core/img/fondo-truco.jpg}" alt="Imagen del juego">
+        <img th:src="@{/img/fondo-truco.jpg}" alt="Imagen del juego">
         <button>JUGAR</button>
 
         <!-- Estadísticas del juego -->
