--- a/src/main/webapp/resources/core/css/MenuJuego.css
+++ b/src/main/webapp/resources/core/css/MenuJuego.css
@@ -16,7 +16,7 @@ body {
 header {
     min-height: 30px;
     width: 100%;
-    padding: 30px;
+    padding: 20px;
     font-size: 25px;
     background: #f4f4f4;
     display:flex;
@@ -26,11 +26,19 @@ header {
 }
 
 .header-usuario{
-        display: flex;
-        align-items: center;
-        gap: 15px;
-        margin-left: auto;
-    }
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    margin-left: auto;
+}
+
+#usuario{
+    width: 60px;
+}
+
+#configuracion{
+    width: 40px;
+}
 
 
 .info-container {
