Vista y controlador basico menuJuego, iniciar Sesion y amigos

--- a/src/main/webapp/resources/core/css/Amigos.css
+++ b/src/main/webapp/resources/core/css/Amigos.css
@@ -113,7 +113,7 @@ footer {
     padding: 20px;
     text-align: center;
     margin-top: 20px;
-    position: fixed;
+    display: block;
     bottom: 0;
     width: 100%;
 }
