--- a/src/main/webapp/resources/core/css/InicioSesion.css
+++ b/src/main/webapp/resources/core/css/InicioSesion.css
@@ -7,10 +7,12 @@ body {
     height: 100vh;
     margin: 0;
     flex-direction: column;
+    justify-content: space-between;
 
 }
 
 #formulario {
+    margin-top: 25px;
     background-color: white;
     padding: 20px;
     border-radius: 8px;
@@ -18,7 +20,6 @@ body {
     min-width: 200px;
     max-width: 400px;
     width: 100%;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -82,14 +83,15 @@ hr {
 footer {
     background-color: #333;
     color: white;
+    padding: 20px;
     text-align: center;
-    position: fixed;
+    display: block;
     bottom: 0;
     width: 100%;
 }
 
 .footer-container {
-    max-width: 1000px;
+    max-width: 800px;
     margin: 0 auto;
 }
 
@@ -102,3 +104,4 @@ footer {
     text-decoration: none;
     transition: color 0.3s ease;
 }
+
