--- a/src/main/webapp/resources/core/css/MenuJuego.css
+++ b/src/main/webapp/resources/core/css/MenuJuego.css
@@ -42,12 +42,12 @@ header {
 
 
 .info-container {
+    margin-top: 20px;
+    padding-top: 5px;
     max-width: 80%;
     min-width: 80%;
-    padding: 30px;
     background: #f4f4f4;
     height: max-content;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -60,8 +60,10 @@ header {
     letter-spacing: 10px;
 }
 
-img {
-    margin: 18px;
+.info-container img{
+    width:  100%;
+    padding: 0;
+    height: 400px;
 }
 
 button {
@@ -71,7 +73,7 @@ button {
     border-radius: 4px;
     border: 3px solid transparent;
     font-size: 16px;
-    width: 100%;
+    width: 90%;
     box-sizing: border-box;
     margin: 10px;
     padding: 8px;
@@ -145,7 +147,7 @@ footer {
     padding: 20px;
     text-align: center;
     margin-top: 20px;
-    position: fixed;
+    display: block;
     bottom: 0;
     width: 100%;
 }
