--- a/src/main/webapp/WEB-INF/views/thymeleaf/MenuJuego.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/MenuJuego.html
@@ -11,7 +11,7 @@
 <!-- HEADER -->
 <header class="main-header">
     <div class="back-button">
-        <a href="">VOLVER AL MENU</a>
+        <a th:href="@{/home}">VOLVER AL MENU</a>
     </div>
     <div class="header-usuario">
         <a href="">
