--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -1,35 +1,91 @@
-<!DOCTYPE HTML>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <title>Taller Web I</title>
-
-  <!-- Boostrap core css -->
-  <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
-
-  <!-- custom style -->
-  <link rel="stylesheet" th:href="@{/css/main.css}"/>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Game Home</title>
+  <link rel="stylesheet" th:href="@{/css/home.css}">
 </head>
-
 <body>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">UNLAM</a>
-</nav>
-
-<main role="main" class="container">
-  <div class = "container">
-    <h1>Bienvenidos a Taller Web 1</h1>
-
-    <a href="login.html" class="btn btn-lg btn-primary btn-block">Volver</a>
+<header class="main-header">
+  <div class="header-bienvenida">
+    <h1>Bienvenido NombreDeUsuario</h1>
   </div>
-</main>
-<!-- /.container -->
 
-<!-- Boostrap core js -->
-<script type="text/javascript" th:src="@{webjars/bootstrap/5.2.0/js/bootstrap.min.js}"></script>
+  <div class="header-cerrarSesion">
+    <a href="">Cerrar sesión</a>
+  </div>
+
+  <div class="header-usuario">
+    <a href="">
+      <img id="usuario" th:src="@{/img/usuario.png}" alt="Usuario">
+    </a>
+  </div>
+
+  <div class="header-confi">
+    <a href="">
+      <img id="configuracion" th:src="@{/img/configuracion.png}" alt="Configuracion">
+    </a>
+  </div>
+</header>
+
+
+<div class="amigos">
+  <h1>Amigos</h1>
+  <img id="amigo1" th:src="@{/img/usuario.png}" alt="Usuario">
+  <img id="amigo2" th:src="@{/img/usuario.png}" alt="Usuario">
+  <img id="amigo3" th:src="@{/img/usuario.png}" alt="Usuario">
+  <img id="amigo4" th:src="@{/img/usuario.png}" alt="Usuario">
+  <img id="amigo5" th:src="@{/img/usuario.png}" alt="Usuario">
+  <img id="amigo6" th:src="@{/img/usuario.png}" alt="Usuario">
+  <img id="amigo7" th:src="@{/img/usuario.png}" alt="Usuario">
+  <img id="amigo8" th:src="@{/img/usuario.png}" alt="Usuario">
+  <img id="amigo9" th:src="@{/img/usuario.png}" alt="Usuario">
+  <img id="amigo10" th:src="@{/img/usuario.png}" alt="Usuario">
+  <img id="amigo11" th:src="@{/img/usuario.png}" alt="Usuario">
+  <img id="amigo12" th:src="@{/img/usuario.png}" alt="Usuario">
+  <img id="amigo13" th:src="@{/img/usuario.png}" alt="Usuario">
+  <img id="amigo14" th:src="@{/img/usuario.png}" alt="Usuario">
+</div>
+
+<div class="container-juegos">
+
+  <div class="truco-container">
+    <a th:href="@{/MenuJuego}">
+      <img th:src="@{/img/truco-home.png}" alt="Imagen del juego truco">
+      <div class="texto-truco">TRUCO</div>
+    </a>
+  </div>
+
+  <div class="uno-container">
+    <a href="#">
+      <img th:src="@{/img/uno-home.jpg}" alt="Imagen del juego uno">
+      <div class="texto-uno">UNO</div>
+    </a>
+  </div>
+
+  <div class="chinchon-container">
+    <a href="#">
+      <img th:src="@{/img/chinchon.jpg}" alt="Imagen del juego chinchon">
+      <div class="texto-chinchon">CHINCHON</div>
+    </a>
+  </div>
+
+</div>
+
+<footer>
+  <div class="footer-container">
+    <p>&copy; 2024 UNLAM. Todos los derechos reservados.</p>
+    <div class="footer-alumnos">
+      <p>Lucas Gavagnin | </p>
+      <p>Gonzalo Ramos | </p>
+      <p>Martin Zaccardo | </p>
+      <p>Franco Vargas | </p>
+      <p>Victoria Croce </p>
+    </div>
+  </div>
+
+</footer>
 </body>
 </html>
