Cambio de margen cerrar sesion

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -8,26 +8,26 @@
 </head>
 <body>
 
-<header class="main-header">
-  <div class="header-bienvenida">
-    <h1>Bienvenido NombreDeUsuario</h1>
-  </div>
+<header class="main-header" >
+      <div class="header-bienvenida">
+        Bienvenido NombreDeUsuario
+      </div>
 
-  <div class="header-cerrarSesion">
-    <a href="">Cerrar sesión</a>
-  </div>
+      <div class="header-cerrarSesion">
+        <a href="">Cerrar sesión</a>
+      </div>
 
-  <div class="header-usuario">
-    <a href="">
-      <img id="usuario" th:src="@{/img/usuario.png}" alt="Usuario">
-    </a>
-  </div>
+      <div class="header-usuario">
+        <a href="">
+          <img id="usuario" th:src="@{/img/usuario.png}" alt="Usuario">
+        </a>
+      </div>
 
-  <div class="header-confi">
-    <a href="">
-      <img id="configuracion" th:src="@{/img/configuracion.png}" alt="Configuracion">
-    </a>
-  </div>
+      <div class="header-confi">
+        <a href="">
+          <img id="configuracion" th:src="@{/img/configuracion.png}" alt="Configuracion">
+        </a>
+      </div>
 </header>
 
 
