--- a/src/main/webapp/WEB-INF/views/thymeleaf/Amigos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/Amigos.html
@@ -10,7 +10,7 @@
 <!-- HEADER -->
 <header class="main-header">
     <div class="back-button">
-        <a href="">VOLVER AL MENU</a>
+        <a th:href="@{/home}">VOLVER AL MENU</a>
     </div>
     <div class="header-usuario">
         <a href="">
@@ -29,11 +29,11 @@
     <h1>Lista de Amigos</h1>
     <div class="friends-list">
         <ul>
-            <li onclick="showDetails('amigo1')">Juan Pérez</li>
-            <li onclick="showDetails('amigo2')">María García</li>
-            <li onclick="showDetails('amigo3')">Carlos Martínez</li>
-            <li onclick="showDetails('amigo4')">Laura Sánchez</li>
-            <li onclick="showDetails('amigo5')">Pedro González</li>
+            <li >Juan Pérez</li>
+            <li >María García</li>
+            <li >Carlos Martínez</li>
+            <li >Laura Sánchez</li>
+            <li >Pedro González</li>
         </ul>
     </div>
 
