--- a/src/main/webapp/WEB-INF/views/thymeleaf/InicioDeSesion.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/InicioDeSesion.html
@@ -20,7 +20,7 @@
 
     <hr>
 
-    <p >¿No tenés cuenta aún? <a href="registro.html" class="link">Registrate</a></p>
+    <p >¿No tenés cuenta aún? <a th:href="@{/registro}" class="link">Registrate</a></p>
 </form>
 
 <!-- Footer -->
