--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -10,7 +10,7 @@
 
 <header class="main-header" >
       <div class="header-bienvenida">
-        Bienvenido NombreDeUsuario
+        Bienvenido Gonzalo!
       </div>
 
       <div class="header-cerrarSesion">
