Cambio colores home

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="header-cerrarSesion">
-        <a href="">Cerrar sesión</a>
+        Cerrar sesión
       </div>
 
       <div class="header-usuario">
