Link de boton usuario del home al perfil

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -18,7 +18,7 @@
       </div>
 
       <div class="header-usuario">
-        <a href="">
+        <a th:href="@{/perfilUsuario}">
           <img id="usuario" th:src="@{/img/usuario.png}" alt="Usuario">
         </a>
       </div>
