--- a/src/main/webapp/WEB-INF/views/thymeleaf/InicioDeSesion.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/InicioDeSesion.html
@@ -7,16 +7,19 @@
 </head>
 <body>
 
-<form id="formulario" action="">
-    <h1> Iniciar sesión en Aplicación</h1>
-    <label for="username">Usuario</label>
-    <input type="text" id="username" name="username" placeholder="nombre de usuario" required>
+<form id="formulario" method="POST" th:action="@{/validar-inicio}" th:object="${datosInicio}">
+    <h1>Iniciar sesión en Aplicación</h1>
+
+    <label for="username">Usuario </label>
+    <input th:field="*{nombre}" type="text" id="username" placeholder="nombre de usuario" required />
 
     <label for="password">Contraseña</label>
-    <input type="password" id="password" name="password" placeholder="contraseña" required>
+    <input th:field="*{password}" type="password" id="password" placeholder="contraseña" required />
 
     <button type="submit">Ingresar</button>
-    <a href="">¿Olvidaste tu usuario o contraseña?</a>
+    <p th:if="${error != null}" id="error" th:text="'Error ' + ${error}"></p>
+
+    <a >¿Olvidaste tu usuario o contraseña?</a>
 
     <hr>
 
