--- a/src/main/webapp/resources/core/css/InicioSesion.css
+++ b/src/main/webapp/resources/core/css/InicioSesion.css
@@ -64,6 +64,10 @@ button:hover {
     background-color: #0000FF;
 }
 
+#error {
+    color: #FF0000;
+}
+
 a {
     font-weight: bold;
     color: #000000;
