--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
@@ -4,38 +4,43 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Taller Web I</title>
 
-    <!-- Boostrap core css -->
+    <!-- Bootstrap -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
 
-    <!-- custom style -->
-    <link rel="stylesheet" th:href="@{/css/perfilUsuario.css}"/>
+    <!-- Estilos generales -->
+    <link rel="stylesheet" th:href="@{/css/general.css}"/>
+
+    <!-- Estilo custom -->
+    <link rel="stylesheet" th:href="@{/css/perfil.css}"/>
+
+    <title>Taller Web I</title>
+
 
 </head>
 <body>
+<header class="col-12 py-3 bor1 d-flex align-items-center">
+    <nav class="col-10 mx-auto d-flex flex-wrap justify-content-between align-items-center text-white">
+        <a class="text-decoration-none fs-4 text-white" th:href="@{/home}">
+            Home
+        </a>
+        <p class="fs-4 m-0">
+            Perfil
+        </p>
+        <a href="#" class="text-decoration-none text-white fs-5 settingsImageContainer">
+            <img id="configuracion" alt="Configuracion" th:src="@{/img/configuracion.png}"/>
+        </a>
+    </nav>
+</header>
 <main class="col-12 d-flex flex-column align-items-center">
-    <header class="col-12 py-3">
-        <div class="col-10 mx-auto d-flex flex-wrap justify-content-between align-items-center text-white">
-            <a href="#">
-                Volver
-            </a>
-            <p>
-                Perfil
-            </p>
-            <a href="#">
-                Ajustes
-            </a>
-        </div>
-    </header>
     <div class="col-12 col-md-10 pt-md-3 userData">
         <div class="col-12 position-relative userHeader d-flex justify-content-center">
             <div class="col-12 imgStyle bg-dark position-relative"></div>
             <div class="rounded-circle position-absolute p-5 userImage"></div>
         </div>
         <div class="col-12 d-flex flex-column justify-content-center align-items-center text-white py-2">
-            <p class="fs-3 fw-semibold m-0">John Doe</p>
-            <p>JohnDoe123</p>
+            <p class="fs-3 fw-semibold m-0" th:text="${fullname}"></p>
+            <p th:text="${username}"></p>
         </div>
         <div class="px-2 px-md-0 pt-2">
             <div class="gameWrapper col-md-12">
@@ -85,10 +90,26 @@
         </div>
     </div>
 </main>
-
-
-<!-- /.container -->
-
+<footer class="col-12 py-4 d-flex flex-column gap-2">
+    <div class="footerWrapper col-10 mx-auto d-flex align-items-center text-white">
+        <div class="col-4 d-flex flex-wrap justify-content-center gap-4">
+            <div><img th:src="@{/img/logos/javalogo.webp}" class="footerImage"/></div>
+            <div><img th:src="@{/img/logos/springlogo.svg}" class="footerImage"/></div>
+        </div>
+        <div class="col-4 d-flex flex-column align-items-center gap-2 flex-wrap fs-5 separationBar">
+            <p>Victoria Croce</p>
+            <p>Lucas Gavagnin</p>
+            <p>Gonzalo Ramos</p>
+            <p>Franco Vargas</p>
+            <p>Martin Zaccardo</p>
+        </div>
+        <div class="col-4 d-flex flex-wrap justify-content-center">
+            <div><img th:src="@{/img/logos/unlamsinfondo.svg}" class="footerImage"/></div>
+        </div>
+    </div>
+    <hr class="col-10 mx-auto text-white"/>
+    <p class="py-1 text-center fs-5 text-white">&copy; 2024 UNLaM. Todos los derechos reservados.</p>
+</footer>
 <!-- Boostrap core js -->
 <script type="text/javascript" th:src="@{webjars/bootstrap/5.2.0/js/bootstrap.min.js}"></script>
 </body>
