--- a/src/main/webapp/resources/core/css/home.css
+++ b/src/main/webapp/resources/core/css/home.css
@@ -1,52 +1,3 @@
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-body {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	/* FONDO */
-	/*background: radial-gradient(white, gray);*/
-	background-color: #84ba36;
-}
-header {
-	height: 90px;
-	width: 100%;
-	font-size: 25px;
-	background: rgba(0, 0, 0, 0.5);
-	padding: 10px;
-	display:flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	color: white;
-}
-
-.header-bienvenida{
-	display: flex;
-	font-size: 30px;
-	font-family: 'Press Start 2P', cursive;
-}
-
-.header-cerrarSesion{
-	display: flex;
-	margin-left: 310px;
-	font-size: 15px;
-	font-family: 'Press Start 2P', cursive;
-	align-items: center;
-}
-
-.header-usuario{
-	display: flex;
-	align-items: center;
-	gap: 15px;
-	margin-left: auto;
-}
-
 #usuario{
 	width: 60px;
 }
@@ -156,28 +107,19 @@ a {
 	cursor: pointer;
 }
 
-footer {
-	background-color: #333;
-	color: white;
-	padding: 20px;
-	text-align: center;
-	margin-top: 20px;
-	position: fixed;
-	bottom: 0;
-	width: 100%;
+.closeSessionBtn {
+	padding: 0.8rem 1.6rem;
+	background: #1D8FF2;
+	border: none;
+	border-radius: 1rem;
+	color: #fff;
+	font-weight: 600;
+	font-size: 1.2rem;
+	transition: all .3s;
+	border: 1px solid #1D8FF2;
 }
 
-.footer-container {
-	max-width: 800px;
-	margin: 0 auto;
-}
-
-.footer-alumnos{
-	margin-top: 10px;
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	color: #bbb;
-	text-decoration: none;
-	transition: color 0.3s ease;
+.closeSessionBtn:hover {
+	background: #1568b1;
+	border: 1px solid #fff;
 }
