--- a/src/main/webapp/resources/core/css/menu-juego.css
+++ b/src/main/webapp/resources/core/css/menu-juego.css
@@ -1,35 +1,5 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* FONDO */
-    background: radial-gradient(white, gray);
-}
-
-/* HEADER */
-header {
-    min-height: 30px;
-    width: 100%;
-    padding: 20px;
-    font-size: 25px;
-    background: #f4f4f4;
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header-usuario{
-    display: flex;
-    align-items: center;
-    gap: 15px;
-    margin-left: auto;
+.menuJuegoWrapper {
+    background-color: #fff;
 }
 
 #usuario{
@@ -40,14 +10,7 @@ header {
     width: 40px;
 }
 
-
 .info-container {
-    margin-top: 20px;
-    padding-top: 5px;
-    max-width: 80%;
-    min-width: 80%;
-    background: #f4f4f4;
-    height: max-content;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -138,31 +101,4 @@ td {
 a {
     text-decoration: none;
     cursor: pointer;
-}
-
-/* Estilos para el footer */
-footer {
-    background-color: #333;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    margin-top: 20px;
-    display: block;
-    bottom: 0;
-    width: 100%;
-}
-
-.footer-container {
-    max-width: 800px;
-    margin: 0 auto;
-}
-
-.footer-alumnos{
-    margin-top: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    color: #bbb;
-    text-decoration: none;
-    transition: color 0.3s ease;
 }
