--- a/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <!-- HEADER -->
-<header class="col-12 py-3 bor1 d-flex align-items-center">
+<header class="col-12 py-3 d-flex align-items-center">
     <nav class="col-10 mx-auto d-flex flex-wrap justify-content-between align-items-center text-white">
         <a class="text-decoration-none fs-4 text-white" th:href="@{/home}">
             Home
@@ -71,7 +71,5 @@
     <hr class="col-10 mx-auto text-white"/>
     <p class="py-1 text-center fs-5 text-white">&copy; 2024 UNLaM. Todos los derechos reservados.</p>
 </footer>
-
-
 </body>
 </html>
