--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -14,20 +14,22 @@
     <title>Game Home</title>
 </head>
 <body>
-<header class="col-12 py-3 bor1 d-flex align-items-center justify-content-between px-4">
-    <h1>Bienvenido $nombreUsuario</h1>
-    <nav class="d-flex flex-wrap gap-5 bor1 align-items-center fs-5">
-        <!-- th:href="@{/perfilUsuario}" -->
-        <a class="text-decoration-none text-white" th:href="@{/perfil}">
-            <!-- th:src="@{/img/usuario.png}" -->
-            <img id="usuario" alt="Usuario" th:src="@{/img/usuario.png}"/>
-        </a>
-        <a href="" class="text-decoration-none text-white fs-5">
-            <!-- th:src="@{/img/configuracion.png}" -->
-            <img id="configuracion" alt="Configuracion" th:src="@{/img/configuracion.png}"/>
-        </a>
-        <button class="closeSessionBtn">Cerrar sesión</button>
-    </nav>
+<header class="col-12 d-flex align-items-center">
+   <div class="col-10 mx-auto d-flex align-items-center justify-content-between">
+       <h1>Bienvenido $nombreUsuario</h1>
+       <nav class="d-flex flex-wrap gap-5 align-items-center fs-5">
+           <!-- th:href="@{/perfilUsuario}" -->
+           <a class="text-decoration-none text-white" th:href="@{/perfil}">
+               <!-- th:src="@{/img/usuario.png}" -->
+               <img id="usuario" alt="Usuario" th:src="@{/img/usuario.png}"/>
+           </a>
+           <a href="" class="text-decoration-none text-white fs-5">
+               <!-- th:src="@{/img/configuracion.png}" -->
+               <img id="configuracion" alt="Configuracion" th:src="@{/img/configuracion.png}"/>
+           </a>
+           <button class="closeSessionBtn">Cerrar sesión</button>
+       </nav>
+   </div>
 </header>
 <main>
     <div class="amigos">
