--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-<header class="col-12 py-3 bor1 d-flex align-items-center">
+<header class="col-12 py-3 d-flex align-items-center">
     <nav class="col-10 mx-auto d-flex flex-wrap justify-content-between align-items-center text-white">
         <a class="text-decoration-none fs-4 text-white" th:href="@{/home}">
             Home
