--- a/src/main/webapp/WEB-INF/views/thymeleaf/registro.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/registro.html
@@ -9,45 +9,30 @@
 <body>
 <div class="container">
     <h2>Registro</h2>
-    <form th:action="@{/registro}" method="post">
+    <form th:action="@{/InicioDeSesion}" method="post" th:object="${datosRegistro}">
         <div class="form-group">
-            <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" name="nombre" required>
-        </div>
-        <div class="form-group">
-            <label for="apellido">Apellido</label>
-            <input type="text" id="apellido" name="apellido" required>
+            <label for="nombre">Nombre de usuario</label>
+            <input th:field="*{nombreUsuario}" type="text" id="nombre" name="nombre" required>
         </div>
         <div class="form-group">
             <label for="email">Correo Electrónico</label>
-            <input type="email" id="email" name="email" required>
+            <input th:field="*{email}" type="email" id="email" name="email" required>
         </div>
         <div class="form-group">
             <label for="password">Contraseña</label>
-            <input type="password" id="password" name="password" required>
+            <input th:field="*{password}" type="password" id="password" name="password" required>
         </div>
         <div class="form-group">
             <label for="password2">Repetir Contraseña</label>
-            <input type="password" id="password2" name="password2" required>
+            <input th:field="*{confirmPassword}" type="password" id="password2" name="password2" required>
         </div>
+
         <div class="form-group">
             <button type="submit">Registrarse</button>
         </div>
     </form>
 
-    <div th:if="${error}">
-        <p th:text="${error}" style="color: red;"></p>
-    </div>
 
-    <div th:if="${mensaje}" id="registroExitosoModal" class="modal">
-        <div class="modal-content">
-            <h2 th:text="${mensaje}">¡Registro Exitoso!</h2>
-            <button id="btnCerrarModal">Cerrar</button>
-            <a th:href="@{/login}" class="button-link">
-                Iniciar Sesión
-            </a>
-        </div>
-    </div>
 
 </div>
 
