--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,7 +16,7 @@
 <body>
 <header class="col-12 d-flex align-items-center">
    <div class="col-10 mx-auto d-flex align-items-center justify-content-between">
-       <h1>Bienvenido $nombreUsuario</h1>
+       <h1 th:text="'Bienvenido ' + ${email}"></h1>
        <nav class="d-flex flex-wrap gap-5 align-items-center fs-5">
            <!-- th:href="@{/perfilUsuario}" -->
            <a class="text-decoration-none text-white" th:href="@{/perfil}">
