--- a/src/main/webapp/resources/core/css/InicioSesion.css
+++ b/src/main/webapp/resources/core/css/InicioSesion.css
@@ -11,8 +11,45 @@ body {
 
 }
 
+header {
+    background-color: #333;
+    color: white;
+    padding: 15px;
+    text-align: center;
+    display: grid;
+    width: 100%;
+    grid-template-columns: 2fr 1fr;
+    grid-template-areas:
+        "texto imagenes";
+}
+
+.texto-bienvenida {
+    grid-area: texto;
+}
+
+.imagenes {
+    grid-area: imagenes;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.headerImage {
+    height: 45px;
+    background-color: #fff;
+    border-radius: 100%;
+    padding: 0.5rem;
+}
+
+.division {
+    margin: 0.5rem;
+    border: 0.5px solid white;
+    height: 100%;
+}
+
 #formulario {
-    margin-top: 25px;
+    margin: 50px;
     background-color: white;
     padding: 20px;
     border-radius: 8px;
@@ -76,7 +113,8 @@ a:hover {
 }
 
 hr {
-    border-color:  black;
+    border:  0.5px solid black;
+    width: 90%;
 }
 
 /* Estilos para el footer */
