--- a/src/main/webapp/resources/core/css/stylesRegistro.css
+++ b/src/main/webapp/resources/core/css/stylesRegistro.css
@@ -1,154 +1,122 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html, body {
-    height: 100%;
-}
-
+/* AJUSTES GENERALES */
 body {
     font-family: Arial, sans-serif;
-    background-color: rgba(18, 18, 18, 0.88);
-    color: white;
+    background: radial-gradient(white, gray);
     display: flex;
     justify-content: center;
-    height: 55%;
-    margin: 2%;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.container {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    max-width: 400px;
-    width: 100%;
+/* HEADER */
+header {
+    background-color: #333;
+    color: white;
+    padding: 15px;
     text-align: center;
-}
-
-h2 {
-    color: #1687ef;
-    margin-bottom: 20px;
-}
-
-.form-group {
-    margin-bottom: 15px;
-    text-align: left;
-}
-
-.form-group label {
-    display: block;
-    color: #121212;
-    font-size: 14px;
-    margin-bottom: 5px;
-}
-
-.form-group input {
+    display: grid;
     width: 100%;
-    padding: 10px;
-    border: 1px solid #cccccc;
-    border-radius: 8px;
-    background-color: #f7f7f7;
-    font-size: 16px;
-    color: #121212;
+    grid-template-columns: 2fr 1fr;
+    grid-template-areas:
+        "texto imagenes";
 }
 
-.form-group input:focus {
-    outline: none;
-    border-color: #1687ef;
+.texto-bienvenida {
+    grid-area: texto;
 }
 
-button {
-    background-color: #84ba36;
-    color: white;
-    padding: 10px 15px;
-    font-size: 16px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    width: 100%;
-}
-
-button:hover {
-    background-color: #1687ef;
-}
-
-img {
-    margin-top: 10px;
-    width: 100%;
-    height: auto;
-}
-
-.modal {
+.imagenes {
+    grid-area: imagenes;
     display: flex;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
 }
 
-.modal-content {
+.headerImage {
+    height: 45px;
+    background-color: #fff;
+    border-radius: 100%;
+    padding: 0.5rem;
+}
+
+.division {
+    margin: 0.5rem;
+    border: 0.5px solid white;
+    height: 100%;
+}
+
+/* FORMULARIO */
+#formulario {
+    margin: 50px;
     background-color: white;
     padding: 20px;
     border-radius: 8px;
-    text-align: center;
-    width: 300px;
-}
-
-.modal-content h2 {
-    color: #1687ef;
-    margin-bottom: 20px;
-}
-
-.modal-content button {
-    background-color: #84ba36;
-    color: white;
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    margin-top: 10px;
-}
-
-.modal-content button:hover {
-    background-color: #1687ef;
-}
-
-.button-link {
-    display: inline-block;
-    background-color: #84ba36;
-    color: white;
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-    border-radius: 8px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-    margin-top: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    min-width: 200px;
+    max-width: 400px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.button-link:hover {
-    background-color: #1687ef;
+h1 {
+    text-align: center;
 }
 
+label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 8px;
+    font-size: 20px;
+}
+
+input{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-sizing: border-box;
+    background: lightgrey;
+}
+
+button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 10px;
+}
+
+button:hover {
+    background-color: #0000FF;
+}
+
+hr {
+    border:  0.5px solid black;
+    width: 90%;
+}
+
+/* FOOTER */
 footer {
     background-color: #333;
     color: white;
     padding: 20px;
     text-align: center;
-    width: 100%;
-    position: absolute;
+    display: block;
     bottom: 0;
+    width: 100%;
 }
 
 .footer-container {
@@ -156,7 +124,7 @@ footer {
     margin: 0 auto;
 }
 
-.footer-alumnos {
+.footer-alumnos{
     margin-top: 10px;
     display: flex;
     flex-direction: row;
