--- a/src/main/webapp/WEB-INF/views/thymeleaf/inicioDeSesion.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/inicioDeSesion.html
@@ -16,13 +16,16 @@
         </div>
     </header>
 
-    <form id="formulario" action="">
+    <form id="formulario" th:action="@{/validar-login}" method="POST" th:object="${datosLogin}">
         <h1> Iniciar sesión en Aplicación</h1>
-        <label for="username">Usuario</label>
-        <input type="text" id="username" name="username" placeholder="nombre de usuario" required>
+
+        <p th:if="${error != null}" style="color: red" th:text="'Error, ' + ${error}"></p>
+
+        <label for="username">Correo electrónico</label>
+        <input th:field="*{email}" type="email" id="username" name="username" placeholder="Correo electrónico" required>
 
         <label for="password">Contraseña</label>
-        <input type="password" id="password" name="password" placeholder="contraseña" required>
+        <input th:field="*{password}" type="password" id="password" name="password" placeholder="contraseña" required>
 
         <button type="submit">Ingresar</button>
         <a href="">¿Olvidaste tu usuario o contraseña?</a>
