--- a/src/main/webapp/WEB-INF/views/thymeleaf/registro.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/registro.html
@@ -17,14 +17,16 @@
         </div>
     </header>
 
-    <form id="formulario" th:action="@{/registrarme}" method="post" th:object="${usuario}">
+    <form id="formulario" th:action="@{/registrarme}" method="post" th:object="${nuevoUsuario}">
         <h1>Registrarse en la aplicación</h1>
+
+        <p th:if="${error}" th:text="${error}" style="color: red;"></p>
 
             <label for="nombre">Nombre de usuario</label>
             <input th:field="*{nombreUsuario}" type="text" id="nombre" name="nombre" placeholder="Ej: Jaimito4570" required>
 
             <label for="email">Correo Electrónico</label>
-            <p th:if="${errorMail}" th:text="${error}" style="color: red;"></p>
+
             <input th:field="*{email}" type="email" id="email" name="email" placeholder="Ej: name@example.com" required>
 
             <label for="password">Contraseña</label>
