Controlador y sevicio modificar-perfil version 2

--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
@@ -27,7 +27,7 @@
         <p class="fs-4 m-0">
             Perfil
         </p>
-        <a href="#" class="text-decoration-none text-white fs-5 settingsImageContainer">
+        <a th:href="@{/modificar-perfil}" class="text-decoration-none text-white fs-5 settingsImageContainer">
             <img id="configuracion" alt="Configuracion" th:src="@{/img/configuracion.png}"/>
         </a>
     </nav>
@@ -38,7 +38,13 @@
             <div class="col-12 imgStyle bg-dark position-relative"></div>
             <div class="rounded-circle position-absolute p-5 userImage"></div>
         </div>
+
         <div class="col-12 d-flex flex-column justify-content-center align-items-center text-white py-2">
+
+            <!-- <p class="fs-3 fw-semibold m-0" th:text="${datosUsuario.getEmail()}"></p> -->
+            <!-- <p th:text="${datosUsuario.getEmail()}"></p> -->
+            
+
             <p class="fs-3 fw-semibold m-0" th:text="${fullname}"></p>
             <p th:text="${username}"></p>
         </div>
