--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -76,6 +76,10 @@
         </div>
 
     </div>
+
+    <a th:href="@{/estadisticas}" id="estadisticas">
+        <div>Ver estadisticas</div>
+    </a>
 </main>
 <footer class="col-12 py-4 d-flex flex-column gap-2">
     <div class="footerWrapper col-10 mx-auto d-flex align-items-center text-white">
