--- a/src/main/webapp/resources/core/css/estadisticas.css
+++ b/src/main/webapp/resources/core/css/estadisticas.css
@@ -62,6 +62,12 @@ header {
     flex: 1;
 }
 
+table{
+    color: black;
+    justify-content: center;
+    align-items: center;
+}
+
 h2 {
     color: #1687ef;
     margin-bottom: 20px;
