--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -5,30 +5,60 @@
     <link rel="stylesheet" th:href="@{/css/truco.css}"/>
 </head>
 <body>
-<h1>Partida de Truco</h1>
+    <header>
+        <h1 class="texto-bienvenida">¡¡Bienvenido a nuestra plataforma de juegos!!</h1>
+        <div class="imagenes">
+            <img th:src="@{/img/logos/javalogo.webp}" class="headerImage"/>
+            <img th:src="@{/img/logos/springlogo.svg}" class="headerImage"/>
+            <div class="division"></div>
+            <div><img th:src="@{/img/logos/unlamsinfondo.svg}" class="headerImage"/></div>
+        </div>
+    </header>
 
-<h2>Jugador:</h2>
+    <main>
+        <h1>Partida de Truco</h1>
 
-<div id="mesa">
-    <div id="cartas-contrincante">
-        <h3>Cartas Contrincante:</h3>
-        <img th:src="@{/img/cartas-contricante.png}" alt="Cartas del Contrincante">
-    </div>
+        <h2>Jugador:</h2>
 
-    <h3>Tus Cartas:</h3>
-    <div id="cartas">
-        <img id="mis-cartas" th:src="@{/img/cartas.png}" alt="Tus Cartas">
-        <img id="mazo" th:src="@{/img/mazo.png}" alt="Mazo de Cartas">
-    </div>
+        <div id="mesa">
+            <div id="cartas-contrincante">
+                <h3>Cartas Contrincante:</h3>
+                <img th:src="@{/img/cartas-truco/Cartas_Adversario.png}" alt="Cartas del Contrincante">
+            </div>
 
-    <div id="botones">
-        <button> Tirar carta</button>
-        <button> Envido</button>
-        <button> Tanto</button>
-        <button> Irme al mazo</button>
-    </div>
+            <div id="cartas-en-juego">
+                <img id="mazo" th:src="@{/img/cartas-truco/Mazo_Cartas.png}" alt="Mazo de Cartas">
+                <img id="miCarta" th:src="@{/img/cartas-truco/Carta_Atras.png}" alt="Mi Carta Jugada">
+                <img id="cartaRival" th:src="@{/img/cartas-truco/Carta_Atras.png}" alt="Carta Jugada Rival">
+            </div>
 
+            <div id="cartas">
+                <h3>Tus Cartas:</h3>
+                <img id="mis-cartas" th:src="@{/img/cartas-truco/Mis_Cartas.png}" alt="Tus Cartas">
+            </div>
 
-</div>
+            <div id="botones">
+                <button> Tirar carta</button>
+                <button> Envido</button>
+                <button> Tanto</button>
+                <button> Irme al mazo</button>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-container">
+            <p>&copy; 2024 UNLAM. Todos los derechos reservados.</p>
+            <div class="footer-alumnos">
+                <p>Lucas Gavagnin |  </p>
+                <p>Gonzalo Ramos |  </p>
+                <p>Martin Zaccardo |  </p>
+                <p>Franco Vargas | </p>
+                <p>Victoria Croce </p>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
