--- a/src/main/webapp/resources/core/css/menu-juego.css
+++ b/src/main/webapp/resources/core/css/menu-juego.css
@@ -1,5 +1,12 @@
+body {
+
+}
+
 .menuJuegoWrapper {
     background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #usuario{
@@ -24,9 +31,9 @@
 }
 
 .info-container img{
-    width:  100%;
-    padding: 0;
-    height: 400px;
+    width:  80%;
+    padding-top: 25px;
+    height: 45rem;
 }
 
 button {
@@ -35,11 +42,11 @@ button {
     padding: 10px 15px;
     border-radius: 4px;
     border: 3px solid transparent;
-    font-size: 16px;
+    font-size: 35px;
+    text-space: 8px;
     width: 90%;
     box-sizing: border-box;
     margin: 10px;
-    padding: 8px;
 }
 
 button:hover {
